personForm.js重命名为personAdd.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
 <script src="{{ url_for('static', filename='js/api/relationshipApi.js') }}"></script>
 
 <!-- 4. 最后加载页面业务逻辑（按功能独立性） -->
-<script src="{{ url_for('static', filename='js/pages/personForm.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pages/personAdd.js') }}"></script>
 <script src="{{ url_for('static', filename='js/pages/relationshipAdd.js') }}"></script>
 <script src="{{ url_for('static', filename='js/pages/personDetail.js') }}"></script>
 <script src="{{ url_for('static', filename='js/pages/personEdit.js') }}"></script>
